--- a/manifest.yml
+++ b/manifest.yml
@@ -1,4 +1,6 @@
 ---
 applications:
- - name: band-app
-   memory: 256M
+  - name: Band-App
+    memory: 256M
+  - services:
+    - bandapp-cloudantdb
